add readme.md, icons from Figma, change styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Rent campers in Ukraine. Comfortable, stylish, and ready for adventure." />
     <meta name="keywords" content="campers, rental, travel, Ukraine, TravelTrucks" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>TravelTrucks — Camper Rentals</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
